# Voice-and-Translation-Assistant

./: .gitignore  HOW_TO_RUN.md  MIGRATION_GUIDE.md  REALTIME_FEATURES.md  VOICE_DETECTION_GUIDE.md  final_comparison.py  pyproject.toml  requirements.txt  setup.py  test_all_files_tiny.py  test_modular.py  test_ollama_gemma.py  test_realtime.py  test_sensitivity.py  test_tts_cleaning.py  test_whisper_models.py  test_whisper_simple.py  test_whisper_tiny.py  try_small_model.py
.claude/: settings.local.json
services/assistance/: rag_assistant.py  requirements.txt
services/translation/: requirements.txt  translation_service.py
shared/audio/: normalizer.py  player.py  realtime_recorder.py  recorder.py  sensitivity_presets.py
shared/base/: voice_assistant.py
shared/config/: audio_config.py  paths_config.py  speech_config.py  tts_config.py
shared/speech/: realtime_transcriber.py  text_processor.py  whisper_transcriber.py
shared/tts/: piper_tts.py  text_cleaner.py  voice_manager.py
shared/utils/: logging.py  system.py
